@startuml

class allMessages {
array listMessages
array listMember[string]
getAllMessageFromCsv(string url)
countExpression(string, array/string author = all, ?dateTime = null) : int
getSequenceXConsecutiveMessage(int) : image
}

class message {
int id
dateTime dateTime
isHaveText():bool
isHaveAttachment():bool
show()
}

abstract class partOfMessage {
string rawString
image content
abstract show(string)
}

class attachement {
}

class text {
isEmpty(): bool
}

class author {
string name
image profilePicture
show():image
}

class imageBuilder {

}

allMessages "0..*"<-- message : store <
message "0..*"<-- attachement : store <
message "1..1"<-- text : store <
message "1..1"<-- author : write <
allMessages "1..*"<-- author : store <
partOfMessage <|-- attachement
partOfMessage <|-- text

@enduml